# TSHR-Android

./: README.md  settings.gradle
app/src/main/cpp/: CMakeLists.txt  thesimpsonshitandrun.cpp
app/src/main/cpp/game/: CMakeLists.txt
app/src/main/cpp/game/code/: CMakeLists.txt
app/src/main/cpp/game/code/ai/: actionbuttonhandler.cpp  actionbuttonhandler.h  actionbuttonmanager.cpp  actionbuttonmanager.h  actionlist.h  actionnames.h  automaticdoor.cpp  automaticdoor.h  playanimonce.cpp  playanimonce.h  state.cpp  state.h  statemanager.cpp  statemanager.h
app/src/main/cpp/game/code/atc/: atcloader.cpp  atcloader.h  atcmanager.cpp  atcmanager.h
app/src/main/cpp/game/code/camera/: allcamera.cpp  animatedcam.cpp  animatedcam.h  bumpercam.cpp  bumpercam.h  bumpercamdata.h  burnoutcam.cpp  burnoutcam.h  chasecam.cpp  chasecam.h  chasecamdata.h  conversationcam.cpp  conversationcam.h  conversationcamdata.h  debugcam.cpp  debugcam.h  firstpersoncam.cpp  firstpersoncam.h  followcam.cpp  followcam.h  followcamdata.h  followcamdatachunk.h  frustrumdrawable.h  icamerashaker.h  isupercamtarget.h  kullcam.cpp  kullcam.h  pccam.cpp  pccam.h  railcam.cpp  railcam.h  relativeanimatedcam.cpp  relativeanimatedcam.h  reversecam.cpp  reversecam.h  sinecosshaker.cpp  sinecosshaker.h  snapshotcam.cpp  snapshotcam.h  staticcam.cpp  (+25 more)
app/src/main/cpp/game/code/cards/: bonuscard.cpp  bonuscard.h  card.cpp  card.h  cardgallery.cpp  cardgallery.h  cards.h  cardsdb.cpp  cardsdb.h  collectorcard.cpp  collectorcard.h
app/src/main/cpp/game/code/cheats/: cheatinputhandler.cpp  cheatinputhandler.h  cheatinputs.h  cheatinputsystem.cpp  cheatinputsystem.h  cheats.cpp  cheats.h
app/src/main/cpp/game/code/console/: console.cpp  console.h  debugconsolecallback.cpp  debugconsolecallback.h  fbstricmp.cpp  fbstricmp.h  nameinsensitive.cpp  nameinsensitive.h  upcase.cpp  upcase.h
app/src/main/cpp/game/code/constants/: actorenum.h  blobshadownames.h  breakablesenum.h  characterenum.h  directionalarrowenum.h  movienames.h  particleenum.h  physprop.h  srrchunks.h  statepropenum.h  vehicleenum.h
app/src/main/cpp/game/code/contexts/: bootupcontext.cpp  bootupcontext.h  context.cpp  context.h  contextenum.h  entrycontext.cpp  entrycontext.h  exitcontext.cpp  exitcontext.h  frontendcontext.cpp  frontendcontext.h  loadingcontext.cpp  loadingcontext.h  pausecontext.cpp  pausecontext.h  playingcontext.cpp  playingcontext.h
app/src/main/cpp/game/code/data/: PersistentSectors.cpp  PersistentWorldManager.cpp  PersistentWorldManager.h  gamedata.h  gamedatamanager.cpp  gamedatamanager.h  savegameinfo.cpp  savegameinfo.h
app/src/main/cpp/game/code/debug/: debuginfo.cpp  debuginfo.h  profiler.cpp  profiler.h  ps2perf.hpp  section.cpp  section.h
app/src/main/cpp/game/code/events/: eventdata.h  eventenum.h  eventlistener.cpp  eventlistener.h  eventmanager.cpp  eventmanager.h
app/src/main/cpp/game/code/font/: defaultfont.h
app/src/main/cpp/game/code/gameflow/: gameflow.cpp  gameflow.h
app/src/main/cpp/game/code/input/: FEMouse.cpp  FEMouse.h  Gamepad.cpp  Gamepad.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseCursor.cpp  MouseCursor.h  RealController.cpp  RealController.h  SteeringWheel.cpp  SteeringWheel.h  allinput.cpp  basedamper.cpp  basedamper.h  button.cpp  button.h  constanteffect.cpp  constanteffect.h  controller.h  forceeffect.cpp  forceeffect.h  inputPointList.h  inputmanager.cpp  inputmanager.h  mappable.cpp  mappable.h  mapper.cpp  mapper.h  rumbleeffect.cpp  rumbleeffect.h  rumblegc.cpp  rumbleps2.cpp  rumblewin32.cpp  rumblexbox.cpp  steeringspring.cpp  steeringspring.h  usercontroller.cpp  (+7 more)
app/src/main/cpp/game/code/interiors/: interiormanager.cpp  interiormanager.h
app/src/main/cpp/game/code/loading/: cameradataloader.cpp  cameradataloader.h  cementfilehandler.cpp  cementfilehandler.h  choreofilehandler.cpp  choreofilehandler.h  consolefilehandler.cpp  consolefilehandler.h  filehandler.h  filehandlerenum.h  filehandlerfactory.cpp  filehandlerfactory.h  iconfilehandler.cpp  iconfilehandler.h  intersectionloader.cpp  intersectionloader.h  loadingmanager.cpp  loadingmanager.h  locatorloader.cpp  locatorloader.h  p3dfilehandler.cpp  p3dfilehandler.h  pathloader.cpp  pathloader.h  roaddatasegmentloader.cpp  roaddatasegmentloader.h  roadloader.cpp  roadloader.h  scroobyfilehandler.cpp  scroobyfilehandler.h  soundfilehandler.cpp  soundfilehandler.h
app/src/main/cpp/game/code/main/: allgcmain.cpp  commandlineoptions.cpp  commandlineoptions.h  errorsGC.h  errorsPS2.h  errorsWIN32.h  errorsXBOX.h  game.cpp  game.h  gcmain.cpp  gcplatform.cpp  gcplatform.h  globaltypes.h  platform.h  ps2main.cpp  ps2platform.cpp  ps2platform.h  singletons.cpp  singletons.h  tuidunaligned.cpp  tuidunaligned.h  win32main.cpp  win32platform.cpp  win32platform.h  xboxmain.cpp  xboxplatform.cpp  xboxplatform.h
app/src/main/cpp/game/code/memory/: allocpool.h  classsizetracker.cpp  classsizetracker.h  createheap.cpp  createheap.h  leakdetection.cpp  leakdetection.h  map.h  memorypool.cpp  memorypool.h  memoryutilities.cpp  memoryutilities.h  propstats.cpp  propstats.h  srrmemory.cpp  srrmemory.h  stlallocators.h
app/src/main/cpp/game/code/meta/: actioneventlocator.cpp  actioneventlocator.h  carstartlocator.cpp  carstartlocator.h  directionallocator.cpp  directionallocator.h  eventlocator.cpp  eventlocator.h  fovlocator.cpp  fovlocator.h  interiorentrancelocator.cpp  interiorentrancelocator.h  locator.cpp  locator.h  locatorevents.h  locatortypes.h  occlusionlocator.cpp  occlusionlocator.h  pedgrouplocator.h  recttriggervolume.cpp  recttriggervolume.h  scriptlocator.cpp  scriptlocator.h  spheretriggervolume.cpp  spheretriggervolume.h  splinelocator.cpp  splinelocator.h  staticcamlocator.cpp  staticcamlocator.h  triggerlocator.cpp  triggerlocator.h  triggervolume.cpp  triggervolume.h  triggervolumetracker.cpp  triggervolumetracker.h  zoneeventlocator.cpp  zoneeventlocator.h
app/src/main/cpp/game/code/mission/: animatedicon.cpp  animatedicon.h  bonusmissioninfo.cpp  boss.h  (+24 more)
app/src/main/cpp/game/libs/: CMakeLists.txt
(+2160 files in other folders)
