cmake_minimum_required(VERSION 3.22.1)

project("thesimpsonshitandrun")

add_subdirectory(game/libs/radmath)

set(SHR_CPP_FILES
        game/code/ai/actionbuttonhandler.cpp
        game/code/ai/actionbuttonmanager.cpp
        game/code/ai/automaticdoor.cpp
        game/code/ai/playanimonce.cpp
        game/code/ai/state.cpp
        game/code/ai/statemanager.cpp
        game/code/ai/sequencer/action.cpp
        game/code/ai/sequencer/actioncontroller.cpp
        game/code/ai/sequencer/sequencer.cpp
        game/code/ai/sequencer/task.cpp
        game/code/ai/vehicle/chaseai.cpp
        game/code/ai/vehicle/potentialfield.cpp
        game/code/ai/vehicle/potentials.cpp
        game/code/ai/vehicle/trafficai.cpp
        game/code/ai/vehicle/vehicleai.cpp
        game/code/ai/vehicle/vehicleairender.cpp
        game/code/ai/vehicle/waypointai.cpp
        game/code/ai/actor/ActorAnimationUFO.cpp
        game/code/ai/actor/actor.cpp
        game/code/ai/actor/actoranimationwasp.cpp
        game/code/ai/actor/actordsg.cpp
        game/code/ai/actor/actormanager.cpp
        game/code/ai/actor/attackbehaviour.cpp
        game/code/ai/actor/attractionbehaviour.cpp
        game/code/ai/actor/cutcambehaviour.cpp
        game/code/ai/actor/evasionbehaviour.cpp
        game/code/ai/actor/flyingactor.cpp
        game/code/ai/actor/intersectionlist.cpp
        game/code/ai/actor/projectile.cpp
        game/code/ai/actor/projectiledsg.cpp
        game/code/ai/actor/spawnpoint.cpp
        game/code/ai/actor/stunnedbehaviour.cpp
        game/code/ai/actor/ufoattackbehaviour.cpp
        game/code/ai/actor/ufobeamalwaysonbehaviour.cpp
        game/code/ai/actor/ufobehaviour.cpp
        game/code/atc/atcloader.cpp
        game/code/atc/atcmanager.cpp
        game/code/camera/animatedcam.cpp
        game/code/camera/bumpercam.cpp
        game/code/camera/chasecam.cpp
        game/code/camera/conversationcam.cpp
        game/code/camera/debugcam.cpp
        game/code/camera/firstpersoncam.cpp
        game/code/camera/followcam.cpp
        game/code/camera/kullcam.cpp
        game/code/camera/pccam.cpp
        game/code/camera/railcam.cpp
        game/code/camera/relativeanimatedcam.cpp
        game/code/camera/reversecam.cpp
        game/code/camera/sinecosshaker.cpp
        game/code/camera/snapshotcam.cpp
        game/code/camera/staticcam.cpp
        game/code/camera/supercam.cpp
        game/code/camera/supercamcentral.cpp
        game/code/camera/supercamcontroller.cpp
        game/code/camera/supercammanager.cpp
        game/code/camera/supersprintcam.cpp
        game/code/camera/surveillancecam.cpp
        game/code/camera/trackercam.cpp
        game/code/camera/walkercam.cpp
        game/code/camera/wrecklesscam.cpp
        game/code/camera/wrecklesseventlistener.cpp
        game/code/cards/bonuscard.cpp
        game/code/cards/card.cpp
        game/code/cards/cardgallery.cpp
        game/code/cards/cardsdb.cpp
        game/code/cards/collectorcard.cpp
        game/code/console/console.cpp
        game/code/console/debugconsolecallback.cpp
        game/code/console/fbstricmp.cpp
        game/code/console/nameinsensitive.cpp
        game/code/console/upcase.cpp
        game/code/contexts/bootupcontext.cpp
        game/code/contexts/context.cpp
        game/code/contexts/entrycontext.cpp
        game/code/contexts/exitcontext.cpp
        game/code/contexts/frontendcontext.cpp
        game/code/contexts/loadingcontext.cpp
        game/code/contexts/pausecontext.cpp
        game/code/contexts/playingcontext.cpp
        game/code/contexts/gameplay/gameplaycontext.cpp
        game/code/contexts/gameplay/loadinggameplaycontext.cpp
        game/code/contexts/demo/democontext.cpp
        game/code/contexts/demo/loadingdemocontext.cpp
        game/code/contexts/supersprint/loadingsupersprintcontext.cpp
        game/code/contexts/supersprint/supersprintcontext.cpp
        game/code/contexts/supersprint/supersprintfecontext.cpp
        game/code/debug/debuginfo.cpp
        game/code/debug/profiler.cpp
        game/code/debug/section.cpp
        game/code/events/eventlistener.cpp
        game/code/events/eventmanager.cpp
        game/code/gameflow/gameflow.cpp
        game/code/input/FEMouse.cpp
        game/code/input/Gamepad.cpp
        game/code/input/Keyboard.cpp
        game/code/input/Mouse.cpp
        game/code/input/MouseCursor.cpp
        game/code/input/RealController.cpp
        game/code/input/basedamper.cpp
        game/code/input/button.cpp
        game/code/input/constanteffect.cpp
        game/code/input/forceeffect.cpp
        game/code/input/inputmanager.cpp
        game/code/input/mappable.cpp
        game/code/input/mapper.cpp
        game/code/input/rumbleeffect.cpp
        game/code/input/rumblewin32.cpp
        game/code/input/steeringspring.cpp
        game/code/input/usercontrollerWin32.cpp
        game/code/input/virtualinputs.cpp
        game/code/input/wheelrumble.cpp
        game/code/interiors/interiormanager.cpp
        game/code/loading/cameradataloader.cpp
        game/code/loading/cementfilehandler.cpp
        game/code/loading/choreofilehandler.cpp
        game/code/loading/consolefilehandler.cpp
        game/code/loading/filehandlerfactory.cpp
        game/code/loading/iconfilehandler.cpp
        game/code/loading/intersectionloader.cpp
        game/code/loading/loadingmanager.cpp
        game/code/loading/locatorloader.cpp
        game/code/loading/p3dfilehandler.cpp
        game/code/loading/pathloader.cpp
        game/code/loading/roaddatasegmentloader.cpp
        game/code/loading/roadloader.cpp
        game/code/loading/scroobyfilehandler.cpp
        game/code/loading/soundfilehandler.cpp
        game/code/main/commandlineoptions.cpp
        game/code/main/game.cpp
        game/code/main/singletons.cpp
        game/code/main/tuidunaligned.cpp
        game/code/main/win32main.cpp
        game/code/main/win32platform.cpp
        game/code/memory/classsizetracker.cpp
        game/code/memory/createheap.cpp
        game/code/memory/leakdetection.cpp
        game/code/memory/memorypool.cpp
        game/code/memory/memoryutilities.cpp
        game/code/memory/propstats.cpp
        game/code/memory/srrmemory.cpp
        game/code/mission/animatedicon.cpp
        game/code/mission/bonusmissioninfo.cpp
        game/code/mission/gameplaymanager.cpp
        game/code/mission/haspresentationinfo.cpp
        game/code/mission/mission.cpp
        game/code/mission/missionmanager.cpp
        game/code/mission/missionscriptloader.cpp
        game/code/mission/missionstage.cpp
        game/code/mission/nocopbonusobjective.cpp
        game/code/mission/nodamagebonusobjective.cpp
        game/code/mission/racepositionbonusobjective.cpp
        game/code/mission/statepropcollectible.cpp
        game/code/mission/timeremainbonusobjective.cpp
        game/code/mission/objectives/buycarobjective.cpp
        game/code/mission/objectives/buyskinobjective.cpp
        game/code/mission/objectives/coinobjective.cpp
        game/code/mission/objectives/collectdumpedobjective.cpp
        game/code/mission/objectives/collectibleobjective.cpp
        game/code/mission/objectives/deliveryobjective.cpp
        game/code/mission/objectives/destroybossobjective.cpp
        game/code/mission/objectives/destroyobjective.cpp
        game/code/mission/objectives/dialogueobjective.cpp
        game/code/mission/objectives/fmvobjective.cpp
        game/code/mission/objectives/followobjective.cpp
        game/code/mission/objectives/getinobjective.cpp
        game/code/mission/objectives/gooutsideobjective.cpp
        game/code/mission/objectives/gotoobjective.cpp
        game/code/mission/objectives/interiorobjective.cpp
        game/code/mission/objectives/loadvehicleobjective.cpp
        game/code/mission/objectives/loseobjective.cpp
        game/code/mission/objectives/missionobjective.cpp
        game/code/mission/objectives/pickupitemobjective.cpp
        game/code/mission/objectives/raceobjective.cpp
        game/code/mission/objectives/talktoobjective.cpp
        game/code/mission/objectives/timerobjective.cpp
        game/code/mission/conditions/damagecondition.cpp
        game/code/mission/conditions/followcondition.cpp
        game/code/mission/conditions/getoutofcarcondition.cpp
        game/code/mission/conditions/keepbarrelcondition.cpp
        game/code/mission/conditions/leaveinteriorcondition.cpp
        game/code/mission/conditions/missioncondition.cpp
        game/code/mission/conditions/notabductedcondition.cpp
        game/code/mission/conditions/outofboundscondition.cpp
        game/code/mission/conditions/positioncondition.cpp
        game/code/mission/conditions/racecondition.cpp
        game/code/mission/conditions/timeoutcondition.cpp
        game/code/mission/conditions/vehiclecarryingstateprop.cpp
        game/code/mission/conditions/vehiclecondition.cpp
        game/code/mission/safezone/safezone.cpp
        game/code/mission/rewards/merchandise.cpp
        game/code/mission/rewards/reward.cpp
        game/code/mission/rewards/rewardsmanager.cpp
        game/code/mission/charactersheet/charactersheetmanager.cpp
        game/code/mission/ufo/tractorbeam.cpp
        game/code/mission/ufo/ufo.cpp
        game/code/mission/respawnmanager/respawnentity.cpp
        game/code/mission/respawnmanager/respawnmanager.cpp
        game/code/presentation/animplayer.cpp
        game/code/presentation/blinker.cpp
        game/code/presentation/cameraplayer.cpp
        game/code/presentation/language.cpp
        game/code/presentation/mouthflapper.cpp
        game/code/presentation/nisplayer.cpp
        game/code/presentation/playerdrawable.cpp
        game/code/presentation/presentation.cpp
        game/code/presentation/presentationanimator.cpp
        game/code/presentation/simpleanimationplayer.cpp
        game/code/presentation/transitionplayer.cpp
        game/code/presentation/tutorialmanager.cpp
        game/code/presentation/presevents/fmvevent.cpp
        game/code/presentation/presevents/nisevent.cpp
        game/code/presentation/presevents/presentationevent.cpp
        game/code/presentation/presevents/transevent.cpp
        game/code/presentation/gui/guientity.cpp
        game/code/presentation/gui/guimanager.cpp
        game/code/presentation/gui/guimenu.cpp
        game/code/presentation/gui/guimenuitem.cpp
        game/code/presentation/gui/guiscreen.cpp
        game/code/presentation/gui/guiscreenmemcardcheck.cpp
        game/code/presentation/gui/guiscreenmemorycard.cpp
        game/code/presentation/gui/guiscreenmessage.cpp
        game/code/presentation/gui/guiscreenprompt.cpp
        game/code/presentation/gui/guisystem.cpp
        game/code/presentation/gui/guitextbible.cpp
        game/code/presentation/gui/guiuserinputhandler.cpp
        game/code/presentation/gui/guiwindow.cpp
        game/code/presentation/gui/backend/guimanagerbackend.cpp
        game/code/presentation/gui/backend/guiscreendemo.cpp
        game/code/presentation/gui/backend/guiscreenloading.cpp
        game/code/presentation/gui/backend/guiscreenloadingfe.cpp
        game/code/presentation/gui/frontend/guimanagerfrontend.cpp
        game/code/presentation/gui/frontend/guiscreencardgallery.cpp
        game/code/presentation/gui/frontend/guiscreencontrollerWin32.cpp
        game/code/presentation/gui/frontend/guiscreendisplay.cpp
        game/code/presentation/gui/frontend/guiscreenloadgame.cpp
        game/code/presentation/gui/frontend/guiscreenmainmenu.cpp
        game/code/presentation/gui/frontend/guiscreenmissiongallery.cpp
        game/code/presentation/gui/frontend/guiscreenoptions.cpp
        game/code/presentation/gui/frontend/guiscreenplaymovie.cpp
        game/code/presentation/gui/frontend/guiscreenscrapbook.cpp
        game/code/presentation/gui/frontend/guiscreenscrapbookcontents.cpp
        game/code/presentation/gui/frontend/guiscreenscrapbookstats.cpp
        game/code/presentation/gui/frontend/guiscreenskingallery.cpp
        game/code/presentation/gui/frontend/guiscreensound.cpp
        game/code/presentation/gui/frontend/guiscreensplash.cpp
        game/code/presentation/gui/frontend/guiscreenvehiclegallery.cpp
        game/code/presentation/gui/frontend/guiscreenviewcredits.cpp
        game/code/presentation/gui/frontend/guiscreenviewmovies.cpp
        game/code/presentation/gui/ingame/guimanageringame.cpp
        game/code/presentation/gui/ingame/guiscreencreditspostfmv.cpp
        game/code/presentation/gui/ingame/guiscreenhastransitions.cpp
        game/code/presentation/gui/ingame/guiscreenhud.cpp
        game/code/presentation/gui/ingame/guiscreeniriswipe.cpp
        game/code/presentation/gui/ingame/guiscreenletterbox.cpp
        game/code/presentation/gui/ingame/guiscreenlevelend.cpp
        game/code/presentation/gui/ingame/guiscreenlevelstats.cpp
        game/code/presentation/gui/ingame/guiscreenmissionbase.cpp
        game/code/presentation/gui/ingame/guiscreenmissionload.cpp
        game/code/presentation/gui/ingame/guiscreenmissionover.cpp
        game/code/presentation/gui/ingame/guiscreenmissionselect.cpp
        game/code/presentation/gui/ingame/guiscreenmissionsuccess.cpp
        game/code/presentation/gui/ingame/guiscreenmultihud.cpp
        game/code/presentation/gui/ingame/guiscreenpause.cpp
        game/code/presentation/gui/ingame/guiscreenpausecontroller.cpp
        game/code/presentation/gui/ingame/guiscreenpausedisplay.cpp
        game/code/presentation/gui/ingame/guiscreenpausemission.cpp
        game/code/presentation/gui/ingame/guiscreenpauseoptions.cpp
        game/code/presentation/gui/ingame/guiscreenpausesettings.cpp
        game/code/presentation/gui/ingame/guiscreenpausesound.cpp
        game/code/presentation/gui/ingame/guiscreenpausesunday.cpp
        game/code/presentation/gui/ingame/guiscreenphonebooth.cpp
        game/code/presentation/gui/ingame/guiscreenpurchaserewards.cpp
        game/code/presentation/gui/ingame/guiscreenrewards.cpp
        game/code/presentation/gui/ingame/guiscreensavegame.cpp
        game/code/presentation/gui/ingame/guiscreentutorial.cpp
        game/code/presentation/gui/ingame/guiscreenviewcards.cpp
        game/code/presentation/gui/ingame/hudevents/hudcardcollected.cpp
        game/code/presentation/gui/ingame/hudevents/hudcoincollected.cpp
        game/code/presentation/gui/ingame/hudevents/hudcountdown.cpp
        game/code/presentation/gui/ingame/hudevents/hudeventhandler.cpp
        game/code/presentation/gui/ingame/hudevents/hudhitnrun.cpp
        game/code/presentation/gui/ingame/hudevents/huditemdropped.cpp
        game/code/presentation/gui/ingame/hudevents/hudmissionobjective.cpp
        game/code/presentation/gui/ingame/hudevents/hudmissionprogress.cpp
        game/code/presentation/gui/ingame/hudevents/hudwaspdestroyed.cpp
        game/code/presentation/gui/utility/hudmap.cpp
        game/code/presentation/gui/utility/hudmapcam.cpp
        game/code/presentation/gui/utility/numerictext.cpp
        game/code/presentation/gui/utility/scrollingtext.cpp
        game/code/presentation/gui/utility/slider.cpp
        game/code/presentation/gui/utility/specialfx.cpp
        game/code/presentation/gui/utility/teletypetext.cpp
        game/code/presentation/gui/utility/transitions.cpp
        game/code/presentation/gui/bootup/guimanagerbootup.cpp
        game/code/presentation/gui/bootup/guimanagerlanguage.cpp
        game/code/presentation/gui/bootup/guiscreenbootupload.cpp
        game/code/presentation/gui/bootup/guiscreenlanguage.cpp
        game/code/presentation/gui/bootup/guiscreenlicense.cpp
        game/code/presentation/gui/minigame/guimanagerminigame.cpp
        game/code/presentation/gui/minigame/guiscreenminihud.cpp
        game/code/presentation/gui/minigame/guiscreenminimenu.cpp
        game/code/presentation/gui/minigame/guiscreenminipause.cpp
        game/code/presentation/gui/minigame/guiscreenminisummary.cpp
        game/code/presentation/fmvplayer/fmvplayer.cpp
        game/code/presentation/fmvplayer/fmvuserinputhandler.cpp
        game/code/render/RenderFlow/renderflow.cpp
        game/code/render/Culling/BoxPts.cpp
        game/code/render/Culling/Cell.cpp
        game/code/render/Culling/CellBlock.cpp
        game/code/render/Culling/CoordSubList.cpp
        game/code/render/Culling/CullData.cpp
        game/code/render/Culling/HexahedronP.cpp
        game/code/render/Culling/ISpatialProxy.cpp
        game/code/render/Culling/OctTreeData.cpp
        game/code/render/Culling/OctTreeNode.cpp
        game/code/render/Culling/SpatialTree.cpp
        game/code/render/Culling/SpatialTreeIter.cpp
        game/code/render/Culling/SphereSP.cpp
        game/code/render/Culling/VectorLib.cpp
        game/code/render/Culling/WorldScene.cpp
        game/code/render/DSG/DSGFactory.cpp
        game/code/render/DSG/DynaPhysDSG.cpp
        game/code/render/DSG/FenceEntityDSG.cpp
        game/code/render/DSG/IEntityDSG.cpp
        game/code/render/DSG/InstAnimDynaPhysDSG.cpp
        game/code/render/DSG/InstDynaPhysDSG.cpp
        game/code/render/DSG/InstStatEntityDSG.cpp
        game/code/render/DSG/InstStatPhysDSG.cpp
        game/code/render/DSG/IntersectDSG.cpp
        game/code/render/DSG/LensFlareDSG.cpp
        game/code/render/DSG/StatePropDSG.cpp
        game/code/render/DSG/StaticEntityDSG.cpp
        game/code/render/DSG/StaticPhysDSG.cpp
        game/code/render/DSG/TriStripDSG.cpp
        game/code/render/DSG/WorldSphereDSG.cpp
        game/code/render/DSG/animcollisionentitydsg.cpp
        game/code/render/DSG/animentitydsg.cpp
        game/code/render/DSG/breakableobjectdsg.cpp
        game/code/render/DSG/collisionentitydsg.cpp
        game/code/render/RenderManager/FrontEndRenderLayer.cpp
        game/code/render/RenderManager/RenderLayer.cpp
        game/code/render/RenderManager/RenderManager.cpp
        game/code/render/RenderManager/WorldRenderLayer.cpp
        game/code/render/Loaders/AllWrappers.cpp
        game/code/render/Loaders/AnimCollLoader.cpp
        game/code/render/Loaders/AnimDSGLoader.cpp
        game/code/render/Loaders/AnimDynaPhysLoader.cpp
        game/code/render/Loaders/BillboardWrappedLoader.cpp
        game/code/render/Loaders/DynaPhysLoader.cpp
        game/code/render/Loaders/FenceLoader.cpp
        game/code/render/Loaders/GeometryWrappedLoader.cpp
        game/code/render/Loaders/InstStatEntityLoader.cpp
        game/code/render/Loaders/InstStatPhysLoader.cpp
        game/code/render/Loaders/IntersectLoader.cpp
        game/code/render/Loaders/LensFlareLoader.cpp
        game/code/render/Loaders/StaticEntityLoader.cpp
        game/code/render/Loaders/StaticPhysLoader.cpp
        game/code/render/Loaders/TreeDSGLoader.cpp
        game/code/render/Loaders/WorldSphereLoader.cpp
        game/code/render/Loaders/breakableobjectloader.cpp
        game/code/render/Loaders/instparticlesystemloader.cpp
        game/code/render/IntersectManager/IntersectManager.cpp
        game/code/render/Particles/particlemanager.cpp
        game/code/render/Particles/particlesystemdsg.cpp
        game/code/render/Particles/vehicleparticleemitter.cpp
        game/code/render/breakables/breakablesmanager.cpp
        game/code/render/animentitydsgmanager/animentitydsgmanager.cpp
        game/code/roads/geometry.cpp
        game/code/roads/intersection.cpp
        game/code/roads/lane.cpp
        game/code/roads/road.cpp
        game/code/roads/roadmanager.cpp
        game/code/roads/roadrender.cpp
        game/code/roads/roadrendertest.cpp
        game/code/roads/roadsegment.cpp
        game/code/roads/roadsegmentdata.cpp
        game/code/roads/trafficcontrol.cpp
        game/code/sound/listener.cpp
        game/code/sound/positionalsoundplayer.cpp
        game/code/sound/simpsonssoundplayer.cpp
        game/code/sound/soundcluster.cpp
        game/code/sound/soundloader.cpp
        game/code/sound/soundmanager.cpp
        game/code/sound/soundrenderercallback.cpp
        game/code/sound/soundrenderer/dasoundplayer.cpp
        game/code/sound/soundrenderer/fader.cpp
        game/code/sound/soundrenderer/musicsoundplayer.cpp
        game/code/sound/soundrenderer/playermanager.cpp
        game/code/sound/soundrenderer/soundallocatedresource.cpp
        game/code/sound/soundrenderer/sounddynaload.cpp
        game/code/sound/soundrenderer/soundnucleus.cpp
        game/code/sound/soundrenderer/soundrenderingmanager.cpp
        game/code/sound/soundrenderer/soundresource.cpp
        game/code/sound/soundrenderer/soundresourcemanager.cpp
        game/code/sound/soundrenderer/soundtuner.cpp
        game/code/sound/soundrenderer/tunerdebugpage.cpp
        game/code/sound/soundrenderer/wireplayers.cpp
        game/code/sound/soundrenderer/wiresystem.cpp
        game/code/sound/avatar/avatarsoundplayer.cpp
        game/code/sound/avatar/carsoundparameters.cpp
        game/code/sound/avatar/soundavatar.cpp
        game/code/sound/avatar/vehiclesounddebugpage.cpp
        game/code/sound/avatar/vehiclesoundplayer.cpp
        game/code/sound/music/musicplayer.cpp
        game/code/sound/soundfx/positionalsoundsettings.cpp
        game/code/sound/soundfx/reverbcontroller.cpp
        game/code/sound/soundfx/reverbsettings.cpp
        game/code/sound/soundfx/soundeffectplayer.cpp
        game/code/sound/soundfx/soundfxfrontendlogic.cpp
        game/code/sound/soundfx/soundfxgameplaylogic.cpp
        game/code/sound/soundfx/soundfxlogic.cpp
        game/code/sound/soundfx/soundfxpauselogic.cpp
        game/code/sound/soundfx/win32reverbcontroller.cpp
        game/code/sound/tuning/globalsettings.cpp
        game/code/sound/dialog/conversation.cpp
        game/code/sound/dialog/conversationmatcher.cpp
        game/code/sound/dialog/dialogcoordinator.cpp
        game/code/sound/dialog/dialogline.cpp
        game/code/sound/dialog/dialoglist.cpp
        game/code/sound/dialog/dialogpriorityqueue.cpp
        game/code/sound/dialog/dialogqueueelement.cpp
        game/code/sound/dialog/dialogselectiongroup.cpp
        game/code/sound/dialog/dialogsounddebugpage.cpp
        game/code/sound/dialog/playabledialog.cpp
        game/code/sound/dialog/selectabledialog.cpp
        game/code/sound/nis/nissoundplayer.cpp
        game/code/sound/sounddebug/sounddebugdisplay.cpp
        game/code/sound/sounddebug/sounddebugpage.cpp
        game/code/sound/movingpositional/actorplayer.cpp
        game/code/sound/movingpositional/aivehiclesoundplayer.cpp
        game/code/sound/movingpositional/animobjsoundplayer.cpp
        game/code/sound/movingpositional/avatarvehicleposnplayer.cpp
        game/code/sound/movingpositional/movingsoundmanager.cpp
        game/code/sound/movingpositional/platformsoundplayer.cpp
        game/code/sound/movingpositional/trafficsoundplayer.cpp
        game/code/sound/movingpositional/vehicleposnsoundplayer.cpp
        game/code/sound/movingpositional/waspsoundplayer.cpp
        game/code/worldsim/avatar.cpp
        game/code/worldsim/avatarmanager.cpp
        game/code/worldsim/groundplanepool.cpp
        game/code/worldsim/hitnrunmanager.cpp
        game/code/worldsim/huskpool.cpp
        game/code/worldsim/vehiclecentral.cpp
        game/code/worldsim/worldcollisionsolveragent.cpp
        game/code/worldsim/worldobject.cpp
        game/code/worldsim/worldphysicsmanager.cpp
        game/code/worldsim/redbrick/geometryvehicle.cpp
        game/code/worldsim/redbrick/physicslocomotion.cpp
        game/code/worldsim/redbrick/physicslocomotioncontrollerforces.cpp
        game/code/worldsim/redbrick/redbrickcollisionsolveragent.cpp
        game/code/worldsim/redbrick/rootmatrixdriver.cpp
        game/code/worldsim/redbrick/suspensionjointdriver.cpp
        game/code/worldsim/redbrick/trafficbodydrawable.cpp
        game/code/worldsim/redbrick/trafficlocomotion.cpp
        game/code/worldsim/redbrick/vehicle.cpp
        game/code/worldsim/redbrick/vehicleeventlistener.cpp
        game/code/worldsim/redbrick/vehicleinit.cpp
        game/code/worldsim/redbrick/vehiclelocomotion.cpp
        game/code/worldsim/redbrick/wheel.cpp
        game/code/worldsim/redbrick/vehiclecontroller/aivehiclecontroller.cpp
        game/code/worldsim/redbrick/vehiclecontroller/humanvehiclecontroller.cpp
        game/code/worldsim/redbrick/vehiclecontroller/vehiclecontroller.cpp
        game/code/worldsim/redbrick/vehiclecontroller/vehiclemappable.cpp
        game/code/worldsim/character/aicharactercontroller.cpp
        game/code/worldsim/character/character.cpp
        game/code/worldsim/character/charactercontroller.cpp
        game/code/worldsim/character/charactermanager.cpp
        game/code/worldsim/character/charactermappable.cpp
        game/code/worldsim/character/characterrenderable.cpp
        game/code/worldsim/character/charactertarget.cpp
        game/code/worldsim/character/footprint/footprintmanager.cpp
        game/code/worldsim/traffic/trafficmanager.cpp
        game/code/worldsim/ped/pedestrian.cpp
        game/code/worldsim/ped/pedestrianmanager.cpp
        game/code/worldsim/harass/chasemanager.cpp
        game/code/worldsim/spawn/spawnmanager.cpp
        game/code/worldsim/coins/coinmanager.cpp
        game/code/worldsim/coins/sparkle.cpp
        game/code/worldsim/parkedcars/parkedcarmanager.cpp
        game/code/worldsim/skidmarks/SkidMarkGenerator.cpp
        game/code/worldsim/skidmarks/skidmark.cpp
        game/code/worldsim/skidmarks/skidmarkmanager.cpp
        game/code/data/PersistentWorldManager.cpp
        game/code/data/gamedatamanager.cpp
        game/code/data/savegameinfo.cpp
        game/code/data/memcard/memorycardmanager.cpp
        game/code/data/config/configstring.cpp
        game/code/data/config/gameconfigmanager.cpp
        game/code/cheats/cheatinputhandler.cpp
        game/code/cheats/cheatinputsystem.cpp
        game/code/cheats/cheats.cpp
        game/code/pedpaths/path.cpp
        game/code/pedpaths/pathmanager.cpp
        game/code/pedpaths/pathsegment.cpp
        game/code/stateprop/stateprop.cpp
        game/code/stateprop/statepropdata.cpp
        game/code/meta/actioneventlocator.cpp
        game/code/meta/carstartlocator.cpp
        game/code/meta/directionallocator.cpp
        game/code/meta/eventlocator.cpp
        game/code/meta/fovlocator.cpp
        game/code/meta/interiorentrancelocator.cpp
        game/code/meta/locator.cpp
        game/code/meta/occlusionlocator.cpp
        game/code/meta/recttriggervolume.cpp
        game/code/meta/scriptlocator.cpp
        game/code/meta/spheretriggervolume.cpp
        game/code/meta/splinelocator.cpp
        game/code/meta/staticcamlocator.cpp
        game/code/meta/triggerlocator.cpp
        game/code/meta/triggervolume.cpp
        game/code/meta/triggervolumetracker.cpp
        game/code/meta/zoneeventlocator.cpp
        game/code/supersprint/supersprintdata.cpp
        game/code/supersprint/supersprintmanager.cpp)

include_directories(game/code)

add_library(thesimpsonshitandrun SHARED ${SHR_CPP_FILES} thesimpsonshitandrun.cpp)
target_link_libraries(thesimpsonshitandrun radmath)
