add_subdirectory(code)
add_subdirectory(libs)

target_link_libraries(code PRIVATE choreo poser pure3d radcontent radcore radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(choreo PRIVATE code poser pure3d radcontent radcore radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(poser PRIVATE code choreo pure3d radcontent radcore radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(pure3d PRIVATE code choreo poser radcontent radcore radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(radcontent PRIVATE code choreo poser pure3d radcore radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(radcore PRIVATE code choreo poser pure3d radcontent radmath radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(radmath PRIVATE code choreo poser pure3d radcontent radcore radmovie radmusic radscript radsound scrooby sim)
target_link_libraries(radmovie PRIVATE code choreo poser pure3d radcontent radcore radmath radmusic radscript radsound scrooby sim)
target_link_libraries(radmusic PRIVATE code choreo poser pure3d radcontent radcore radmath radmovie radscript radsound scrooby sim)
target_link_libraries(radscript PRIVATE code choreo poser pure3d radcontent radcore radmath radmovie radmusic radsound scrooby sim)
target_link_libraries(radsound PRIVATE code choreo poser pure3d radcontent radcore radmath radmovie radmusic radscript scrooby sim)
target_link_libraries(scrooby PRIVATE code choreo poser pure3d radcontent radcore radmath radmovie radmusic radscript radsound sim)
target_link_libraries(sim PRIVATE code choreo poser pure3d radcontent radcore radmath radmovie radmusic radscript radsound scrooby)