add_subdirectory(choreo)
add_subdirectory(poser)
add_subdirectory(pure3d)
add_subdirectory(radcontent)
add_subdirectory(radcore)
add_subdirectory(radmath)
add_subdirectory(radmovie)
add_subdirectory(radmusic)
add_subdirectory(radscript)
add_subdirectory(radsound)
add_subdirectory(scrooby)
add_subdirectory(sim)